# ParProgramming

Admission/: latency_measure.c
Task/: lab1.c  result_mpi.txt
lab1/Admission/: CMakeLists.txt  calculate_pi.c  latency_measure.c
lab1/Task/: CMakeLists.txt  lab1.c  lab1_mpi.c  plot_solution.py  plot_solution_p.py  result_mpi.txt
lab2/Admission/: CMakeLists.txt  mpi.c  phtread.c  pipe_communication.c  plane.py  sorting_comp.c
lab2/Task/: CMakeLists.txt  sin.c
